# monsgeek-akko-linux

./: .gitignore  99-monsgeek.rules  CLAUDE.md  FEATURE_MAP.md  Makefile  NOTES.md  README.md  SETUP.md  TODO.md  devices_electron.json  devices_webapp.json  extracted_protocol.md  run_wine_iot.sh
.claude/commands/: commit.md  lint.md
.github/workflows/: ci.yml  release-unbrick.yml
akko-hid-bpf/: Cargo.toml
akko-hid-bpf/akko-ebpf/: Cargo.toml
akko-hid-bpf/akko-ebpf/src/: main.rs
akko-hid-bpf/akko-loader/: Cargo.toml
akko-hid-bpf/akko-loader/src/: control.rs  hid.rs  loader.rs  main.rs
data/: device_matrices.json  devices.json  key_codes.json  key_layouts.json  led_matrices.json
docs/: CLI.md  FIRMWARE_PATCH.md  HARDWARE.md  NOTES_ARCHIVE.md  PROTOCOL.md
docs/bugs/: consumer_report_dongle_misroute.txt
driver_extract/: add-stubs-transform.js  download-and-extract.sh  extract-all.sh  extract-devices.js  extract-matrices.js  merge-matrices.js  package-lock.json  package.json  refactor-bundle.js  refactor-transform.js
firmwares/: README.md  config_erase.dfu
firmwares/2949-v407/: CHARGING.md  UPGRADE_DUMMY.md
firmwares/2949-v407/docs/: BATTERY_ADC_QUIRKS.md
firmwares/2949-v407/ghidra_v407.rep/: projectState
firmwares/2949-v407/patch/: Makefile  handlers.S  handlers.c  hid_desc.h  hook.S  hook_framework.py  (+5 more)
ghidra_scripts/: ExportCallGraph.java  ExportSymbols.java  LabelVectorTable.java
iot_driver_linux/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  tui-demo.webm
iot_driver_linux/.github/workflows/: ci.yml
iot_driver_linux/akko-ebpf/: Cargo.toml
iot_driver_linux/akko-ebpf/.cargo/: config.toml
iot_driver_linux/akko-ebpf/src/: main.rs
iot_driver_linux/bpf/: Makefile  akko-rebind.sh  akko_dongle.skel.h  hid_bpf.h  loader
iot_driver_linux/bpf/hid_battery_support/: README.md  akko_loader.c
iot_driver_linux/bpf/hid_battery_support/akko-loader-rs/: Cargo.toml
iot_driver_linux/bpf/hid_battery_support/akko-loader-rs/src/: control.rs  hid.rs  loader.rs  main.rs
iot_driver_linux/bpf/hid_battery_support/common/: hid_bpf.h
iot_driver_linux/bpf/hid_battery_support/option_a_keyboard_inject/: README.md  akko_keyboard_battery.bpf.c  akko_keyboard_battery.skel.h  loader_kb  loader_kb.c
iot_driver_linux/bpf/hid_battery_support/option_b_bidirectional/: README.md  akko_bidirectional.bpf.c  loader_bidir.c
iot_driver_linux/bpf/hid_battery_support/option_b_wq_experimental/: README.md  akko_wq.bpf.c  loader_wq.c
iot_driver_linux/bpf/hid_battery_support/option_c_on_demand/: akko_on_demand.bpf.c
iot_driver_linux/bpf/hid_battery_support/option_c_vendor_feature/: README.md  akko_dongle.bpf.c
iot_driver_linux/bpf/hid_battery_support/working/: README.md  akko_dongle.bpf.c  loader.c
iot_driver_linux/examples/: calib_curve_render.rs  dongle_throughput_test.rs  read_dongle.rs  screencast_reentry_test.rs
iot_driver_linux/monsgeek-joystick/: Cargo.toml
iot_driver_linux/monsgeek-joystick/src/: config.rs  joystick.rs  lib.rs  main.rs  mapper.rs
iot_driver_linux/monsgeek-joystick/src/tui/: app.rs  keyboard_layout.rs  mod.rs  render.rs
iot_driver_linux/monsgeek-keyboard/: Cargo.toml
iot_driver_linux/monsgeek-keyboard/src/: error.rs  hid_codes.rs  led.rs  lib.rs  magnetism.rs  settings.rs  sync.rs
iot_driver_linux/monsgeek-keyboard/tests/: device_queries.rs
iot_driver_linux/monsgeek-transport/: Cargo.toml
iot_driver_linux/monsgeek-transport/src/: bluetooth.rs  command.rs  device_registry.rs  discovery.rs  error.rs  event_parser.rs  flow_control.rs  hid_bluetooth.rs  hid_dongle.rs  hid_wired.rs  lib.rs  printer.rs  protocol.rs  sync_adapter.rs  types.rs  webrtc.rs
iot_driver_linux/packaging/: com.monsgeek.iot_driver.desktop  solutions.echtzeit.akko_keyboard_driver.desktop
iot_driver_linux/proto/: driver.proto
iot_driver_linux/scripts/: pre-commit  setup-hooks.sh  setup-local-aya.sh
iot_driver_linux/src/: anim.rs  audio_reactive.rs  bpf_loader.rs  cli.rs  color.rs  device_loader.rs  devices.rs  firmware.rs  firmware_api.rs  flash.rs  gif.rs  grpc.rs  hid.rs  key_action.rs  keymap.rs  led_stream.rs  lib.rs  macro_seq.rs  main.rs  power_supply.rs  protocol.rs  pulse.rs  screen_calib.rs  screen_capture.rs  settings.rs  tui.rs
iot_driver_linux/src/commands/: animations.rs  debug.rs  dongle.rs  effect.rs  firmware.rs  keymap.rs  led_stream.rs  macros.rs  mod.rs  notify.rs  probe.rs  query.rs  reactive.rs  set.rs  triggers.rs  userpic.rs  utility.rs
iot_driver_linux/src/effect/: mod.rs  preview.rs
iot_driver_linux/src/hal/: constants.rs  interface.rs  mod.rs  registry.rs
iot_driver_linux/src/notify/: daemon.rs  dbus.rs  keymap.rs  log.rs  mod.rs  state.rs
iot_driver_linux/src/pcap_analyzer/: mod.rs  printer.rs  usb_urb.rs
iot_driver_linux/src/profile/: builtin.rs  json.rs  mod.rs  registry.rs  traits.rs  types.rs
iot_driver_linux/src/tui/: help.rs  mod.rs  shared.rs  widgets.rs
iot_driver_linux/src/tui/tabs/: audio.rs  depth.rs  device_info.rs  key_mapping.rs  mod.rs  notify.rs  remaps.rs  screen.rs  triggers.rs
iot_driver_linux/systemd/: akko-bpf-battery.service
iot_driver_linux/tests/: macro_seq_integration.rs  remap_list_integration.rs
iot_driver_linux/udev/: 99-monsgeek.rules
monsgeek-unbrick/: Cargo.toml  build.rs
monsgeek-unbrick/src/: dfuse.rs  driver.rs  firmware.rs  flash_map.rs  main.rs  upload.rs  winusb.rs
patch/: hook_framework.py
plasma-tray/: akko-tray.desktop  controller.py  main.py  main.qml
protocol/: COMMAND_REFERENCE.md  PROTOCOL_OVERVIEW.md  device_definitions.js  hid_protocol_core.js
scripts/: akko-bpf-load.py  akko-bpf-load.sh  akko-bpf-unload.sh  battery-monitor.sh  battery-watch.sh  diag_patched_fw.py  dongle_debug.py  flash_firmware.py  generate_patch_files.py  install-data.sh  make_config_erase_dfu.py  rtt_battery_monitor.py  test_f7.py  uhid_dummy_device.py  update-device-db.sh
tests/: Dockerfile  TESTING.md  TEST_REPORT_TEMPLATE.md  run_tests.sh
tests/scripts/: test_bpf_battery.sh  test_cli_roundtrip.sh  test_tui_basic.sh
tests/vm/: setup_vm.sh
udev/: 99-monsgeek.rules
(+34 files in other folders)
