[package]
name = "iot_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC
tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
tower-http = { version = "0.6", features = ["cors"] }
http = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HID access
hidapi = "2.6"

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Database (optional, for compatibility)
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Audio reactive mode
cpal = { version = "0.15", features = ["jack"] }
spectrum-analyzer = "1.4"

# Signal handling
ctrlc = "3.4"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# GIF/Image processing
image = { version = "0.25", default-features = false, features = ["gif", "png"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "iot_driver"
path = "src/main.rs"

# TUI is now integrated into iot_driver via 'iot_driver tui' command
# [[bin]]
# name = "monsgeek-tui"
# path = "src/tui.rs"
