[package]
name = "iot_driver"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Linux driver for MonsGeek/Akko magnetic Hall Effect keyboards"
repository = "https://github.com/echtzeit-solutions/monsgeek-akko-linux"
keywords = ["keyboard", "hid", "monsgeek", "akko", "rongyuan", "hall-effect", "magnetic"]
categories = ["hardware-support"]

[dependencies]
# gRPC
tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
tower-http = { version = "0.6", features = ["cors"] }
http = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HID access
hidapi = "2.6"

# Hot-plug detection (Linux udev)
tokio-udev = "0.9"
libc = "0.2"

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Database (optional, for compatibility)
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"
throbber-widgets-tui = "0.8"

# Audio reactive mode
cpal = { version = "0.15", features = ["jack"] }
spectrum-analyzer = "1.4"

# Screen color reactive mode (PipeWire screencast)
ashpd = { version = "0.10", optional = true }
pipewire = { version = "0.9", optional = true }

# Signal handling
ctrlc = "3.4"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# BPF loading (for battery integration)
aya = { version = "0.13", optional = true }

# GIF/Image processing
image = { version = "0.25", default-features = false, features = ["gif", "png"] }

# Firmware download/update
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[features]
default = ["firmware-api"]
firmware-api = ["dep:reqwest", "firmware-api-async"]
firmware-api-async = ["dep:reqwest"]
bpf = ["dep:aya"]
screen-capture = ["dep:ashpd", "dep:pipewire"]

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "iot_driver"
path = "src/main.rs"

# TUI is now integrated into iot_driver via 'iot_driver tui' command
# [[bin]]
# name = "monsgeek-tui"
# path = "src/tui.rs"
