[package]
name = "akko-ebpf"
version = "0.1.0"
edition = "2021"
description = "HID-BPF driver for Akko/MonsGeek 2.4GHz dongle battery integration"
license = "GPL-2.0-only"

[dependencies]
# Using local aya from the modified repo with struct_ops support
aya-ebpf = { path = "../../../aya/aya-main/ebpf/aya-ebpf" }

[build-dependencies]
which = "7"

[profile.dev]
opt-level = 3
debug = false
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
