[package]
name = "akko-ebpf"
version = "0.1.0"
edition = "2021"
description = "HID-BPF driver for Akko/MonsGeek 2.4GHz dongle battery integration"
license = "GPL-2.0-only"

[dependencies]
# Aya fork with HID-BPF struct_ops support (https://github.com/heeen/aya/tree/struct_ops)
aya-ebpf = { git = "https://github.com/heeen/aya.git", branch = "struct_ops" }

[build-dependencies]
which = "7"

[profile.dev]
opt-level = 3
debug = false
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

# Prevent auto-discovery as part of parent workspace
[workspace]
