[package]
name = "monsgeek-joystick"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Virtual joystick mapper for MonsGeek magnetic Hall Effect keyboards"

[dependencies]
# Keyboard interface
monsgeek-keyboard = { path = "../monsgeek-keyboard" }
monsgeek-transport = { path = "../monsgeek-transport" }

# Virtual input device (uses uinput internally)
evdev = "0.12"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }
futures = "0.3"

# TUI
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Config serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Home directory for config path
dirs = "5"

[[bin]]
name = "monsgeek-joystick"
path = "src/main.rs"
