[package]
name = "monsgeek-keyboard"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "High-level keyboard interface for MonsGeek/Akko keyboards"

[dependencies]
monsgeek-transport = { path = "../monsgeek-transport" }
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
