[package]
name = "monsgeek-transport"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Transport abstraction for MonsGeek/Akko keyboard communication"

[dependencies]
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
futures = "0.3"
tracing = "0.1"
hidapi = "2.6"
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-udev = { version = "0.9", optional = true }

[features]
default = ["hotplug"]
hotplug = ["tokio-udev"]
bluetooth = []  # Future: btleplug
webrtc = []     # Future: webrtc-rs
